# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

nobase_include_HEADERS = picotm/fcntl-tm.h \
                         picotm/fcntl.h \
                         picotm/stddef.h \
                         picotm/stdlib-tm.h \
                         picotm/stdlib.h \
                         picotm/string-tm.h \
                         picotm/string.h \
                         picotm/sys/socket-tm.h \
                         picotm/sys/socket.h \
                         picotm/sys/stat-tm.h \
                         picotm/sys/stat.h \
                         picotm/sys/types.h \
                         picotm/picotm-libc.h \
                         picotm/unistd-tm.h \
                         picotm/unistd.h
