# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# DEALINGS IN THE SOFTWARE.

nobase_include_HEADERS = picotm/config/picotm-libc-config.h \
                         picotm/errno.h \
                         picotm/fcntl-tm.h \
                         picotm/fcntl.h \
                         picotm/sched.h \
                         picotm/stdbool.h \
                         picotm/stddef.h \
                         picotm/stdio-tm.h \
                         picotm/stdio.h \
                         picotm/stdlib-tm.h \
                         picotm/stdlib.h \
                         picotm/string-tm.h \
                         picotm/string.h \
                         picotm/sys/socket-tm.h \
                         picotm/sys/socket.h \
                         picotm/sys/stat-tm.h \
                         picotm/sys/stat.h \
                         picotm/sys/types.h \
                         picotm/picotm-libc.h \
                         picotm/unistd-tm.h \
                         picotm/unistd.h
